fixes centering for hero copy on oral contrast and syringes #21918

--- a/wp-content/themes/theme/assets/bundle.css
+++ b/wp-content/themes/theme/assets/bundle.css
@@ -2485,9 +2485,20 @@ textarea,
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-position: bottom;
 	z-index: 1;
 	padding:0 20px;
-	color: hsla(0, 0%, 100%, 1)
+	color: hsla(0, 0%, 100%, 1);
+	position: relative
+}
+	.clearhero .content {
+  position: absolute;
+  top: 48%;
+  -webkit-transform: translateY(-48%);
+          transform: translateY(-48%);
+}
+	.clearhero .content p {
+  margin-top: 0px;
 }
 	.clearhero .title {
   margin-bottom: 0;
@@ -3219,15 +3230,6 @@ textarea,
 	height: 540px;
 }
 	.syringes {
-}
-	.syringes .clearhero {
-  position: relative;
-}
-	.syringes .clearhero .content {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
 }
 	.syringes .categories {
   padding: 80px 20px 50px 20px;
