--- a/wp-content/themes/theme/styles/templates/product-landing.css
+++ b/wp-content/themes/theme/styles/templates/product-landing.css
@@ -5,9 +5,21 @@
 	min-height: 400px;
 	width: 100%;
 	@apply --background-standard;
+	background-position: bottom;
 	z-index: 1;
 	padding:0 20px;
 	color: var(--white);
+	position: relative;
+
+	& .content {
+		position: absolute;
+		top: 48%;
+		transform: translateY(-48%);
+
+		& p {
+			margin-top: 0px;
+		}
+	}
 
 	& .title {
 		margin-bottom: 0;
@@ -38,7 +50,6 @@
 	padding: 30px 20px;
 }
 
-
 .angio-and-cath-lab-syringes {
 	padding: 30px 20px;
 }
@@ -51,7 +62,6 @@
 .mr-syringes {
 	padding: 30px 20px;
 }
-
 
 
 
